typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block2.ts.stderr
error: Unexpected token Some(Hash)
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block2.ts:2:5
  |
2 |     #
  |     ^

